Fix Navbar Collapse Width

--- a/fec/core/static/less/fec.less
+++ b/fec/core/static/less/fec.less
@@ -8,7 +8,7 @@
 @icon-font-path:                "../../fonts/";
 
 /* Set Small Screen Width to Correct Size for Navbar Breaking */
-@screen-sm:                     812px;
+@screen-sm:                     870px;
 
 
 /* General Customizations */
